--- a/DemirWerbig/index.html
+++ b/DemirWerbig/index.html
@@ -17,7 +17,7 @@
     <a id="text1" aria-disabled="true">Bed Bull</a>
     <!-- einzeiliger Kommentar  <p id="text1">Bed Bull</p> -->
 </div>
-<video id="video" muted autoplay loop >
+<video id="video" muted autopmlay loop >
     <source  src="video/Projekt2.mp4" type="video/mp4">
 </video>
 
