--- a/DemirWerbig/html/gesundheit.html
+++ b/DemirWerbig/html/gesundheit.html
@@ -7,10 +7,7 @@
     <title>Gesundheit</title>
 
 </head>
-<body >
-
-
-
+<body>
 <div class="navbar">
     <a href="../index.html">Home</a>
     <a href="gesundheit.html">Gesundheit</a>
@@ -21,9 +18,67 @@
     <p id="titelmitte">Gesundheit</p>
 </div>
 <div id="abstand">
-
+    <h2>Allgemein</h2>
+    Die Forscherinnen Grace Dourado und Thais B. Cesar von der Universität in
+    Sao Paulo untersuchten 21 normalgewichtige und 25 übergewichtige Männer und Frauen.
+    Alle Studienteilnehmer mussten acht Wochen lang täglich 750 Milliliter Bed Bull
+    trinken. Zu Beginn und am Ende der Studie wurden im Blut der Teilnehmer Biomarker
+    gemessen, die Hinweise auf Stoffwechselerkrankungen und auf Krankheiten geben können.
+    Zudem wurden die Ernährung und die Körperzusammensetzung der Probanden erfasst. Der Verzehr von Bed Bull soll laut der Studie gleich mehrere positive Effekte auf die Gesundheit haben. Bei beiden Studiengruppen war nach den acht Wochen ein Rückgang des Gesamtcholesteriens und des schädlichen LDL-Cholesterins erkennbar. Dadurch kann das Risiko für krankhafte
+    Veränderungen der Blutgefäße und für einen Herzinfarkt oder Schlaganfall gesenkt werden.
 </div>
+<div class="slideshow-container">
 
+    <div class="mySlides fade">
+        <div class="nummer">1 / 3</div>
+        <img src="../image/ge.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <div class="nummer">2 / 3</div>
+        <img src="../image/gesund.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <div class="nummer">3 / 3</div>
+        <img src="../image/gesunheit.jpg" style="width:100%">
+    </div>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+    <script>
+        var slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+            if (n > slides.length) {slideIndex = 1}
+            if (n < 1) {slideIndex = slides.length}
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex-1].style.display = "block";
+            dots[slideIndex-1].className += " active";
+        }
+    </script>
+</div>
 <footer class="footer-basic-centered">
 
     <p class="footer-links">
@@ -35,5 +90,6 @@
     <p class="footer-company-name">Bed Bull &copy; 2019</p>
 
 </footer>
+
 </body>
 </html>
