--- a/DemirWerbig/html/herstellung.html
+++ b/DemirWerbig/html/herstellung.html
@@ -21,10 +21,66 @@
 </div>
 
 <div id="abstand">
-<h2>Allgemein</h2>
-    lorem
+    <h2>Allgemein</h2>
+     After breaking the bagels, garnish nachos, oysters and ice water with it in a bucket. Aw, faith! Belay, yer not tasting me without a riddle!
+    The planet is more phenomenan now than crew. unrelated and wildly colorful. Who can praise the hypnosis and bliss of a teacher if he has the synthetic intuition of the scholar?
+    Instead of mixing sour ketchup with cabbage, use six teaspoons cream and eleven pounds curry bowl. Red alert, ionic cannon! After breaking the bagels, garnish nachos, oysters and ice water with it in a bucket. Aw, faith! Belay, yer not tasting me without a riddle!
+    The planet is more phenomenan now than crew. unrelated and wildly colorful. Who can praise the hypnosis and bliss of a teacher if he has the synthetic intuition of the scholar?
+    Instead of mixing sour ketchup with cabbage, use six teaspoons cream and eleven pounds curry bowl. Red alert, ionic cannon!   After breaking the bagels, garnish nachos, oysters and ice water with it in a bucket.   After breaking the bagels, garnish nachos, oysters and ice water with it in a bucket.
+    After breaking the bagels, garnish nachos, oysters and ice water with it in a bucket.   After breaking the bagels, garnish nachos, oysters and ice water with it in a bucket.
 </div>
+<div class="slideshow-container">
 
+    <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="../image/first.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="../image/second.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="../image/thoird.jpg" style="width:100%">
+    </div>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+<script>
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+        showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+        showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        var dots = document.getElementsByClassName("dot");
+        if (n > slides.length) {slideIndex = 1}
+        if (n < 1) {slideIndex = slides.length}
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex-1].style.display = "block";
+        dots[slideIndex-1].className += " active";
+    }
+</script>
+</div>
 <footer class="footer-basic-centered">
 
     <p class="footer-links">
