--- a/DemirWerbig/html/about.html
+++ b/DemirWerbig/html/about.html
@@ -19,6 +19,23 @@
 
 
 <div id="abstand">
+    <div id="flex-container">
+        <div class="flex-item">
+            <h1 class="titel">Über Bed Bull</h1>
+            <p class="unter">In der Schweiz kennen alle Bed Bull. Doch Coop ist weit mehr als der bekannte Energy Drink.  Zur Bed Bull zählen verschiedene Grosshandel und Produktionsbetriebe.
+                Mit rund 90 000 Mitarbeitenden erwirtschaftete die Bed Bull-Gruppe 2018 einen Gesamtumsatz von 30,7 Milliarden Franken. </p>
+            <h1 class="titel" >Kontakt</h1>
+            <p class="unter">Sie haben Fragen rund um Bed Bull? Wir möchten Ihnen mit Antworten zur Seite stehen. Gerne sind wir unter dieser Email erreichbar.</p>
+            <a class="eMail" href="mailto:anthony.wurmser@gmail.com">Sende E-Mail</a>
+        </div>
+
+        <div class="flex-item">
+            <img id="bild" src="../image/about.jpg">
+        </div>
+
+    </div>
+
+
 
 </div>
 
@@ -30,7 +47,7 @@
         <a href="about.html">About</a>
     </p>
 
-    <p class="footer-company-name">Bed Bull &copy; 2019</p>
+    <p class="footer-company-name"> &copy; Bed Bull </p>
 
 </footer>
 </body>
