--- a/DemirWerbig/html/gesundheit.html
+++ b/DemirWerbig/html/gesundheit.html
@@ -87,7 +87,7 @@
         <a href="about.html">About</a>
     </p>
 
-    <p class="footer-company-name">Bed Bull &copy; 2019</p>
+    <p class="footer-company-name"> &copy; Bed Bull </p>
 
 </footer>
 
