--- a/DemirWerbig/index.html
+++ b/DemirWerbig/index.html
@@ -43,12 +43,12 @@
 <footer class="footer-basic-centered">
 
     <p class="footer-links">
-        <a href="index.html">Home</a>
+        <a class="schrift" href="index.html">Home</a>
         ·
         <a href="html/about.html">About</a>
     </p>
 
-    <p class="footer-company-name">Bed Bull &copy; 2020</p>
+    <p class="footer-company-name"> &copy; Bed Bull </p>
 
 </footer>
 </body>
